--- a/WPFNodePad/MainWindow.xaml
+++ b/WPFNodePad/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFNodePad"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="WPF NodePad" Height="450" Width="800">
     <DockPanel>
         
         <Menu IsMainMenu="True" DockPanel.Dock="Top" Background="LightGray">
@@ -35,23 +35,45 @@
 
             </MenuItem>
             <MenuItem Header="_Edit">
-                <MenuItem Header="Copy" >
+                <MenuItem Header="Undo" Click="Undo">
+                    <MenuItem.Icon >
+                        <Image Source="/icons/undoarrow_undo_1534.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Redo" Click="Redo">
+                    <MenuItem.Icon >
+                        <Image Source="/icons/redoarrow_rehace_1547.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <Separator/>
+                <MenuItem Header="Copy" Click="Copy" >
                     <MenuItem.Icon >
                         <Image Source="/icons/copy_paste_document_file_1557.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Past" >
+                <MenuItem Header="Paste" Click="Paste" >
                     <MenuItem.Icon >
                         <Image Source="/icons/texteditor_pencil_detext_836.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Cut" >
+                <MenuItem Header="Cut"  Click="Cut">
                     <MenuItem.Icon >
                         <Image Source="/icons/Scissors512_44207.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
+                <Separator/>
+                <MenuItem Header="Select All" Click="SelectAll" >
+                    <MenuItem.Icon >
+                        <Image Source="/icons/ic_done_all_128_28243.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Deselect All" Click="DeselectAll" >
+                    <MenuItem.Icon >
+                        <Image Source="/icons/collapse_all_icon_136745.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
-            <MenuItem Header="_About"/>
+            <MenuItem Header="_About" Click="About"/>
         </Menu>
 
         <ToolBarTray DockPanel.Dock="Top">
@@ -77,22 +99,22 @@
             </ToolBar>
             
             <ToolBar Band="1" BandIndex="1">
-                <Button Width="25">
+                <Button Width="25" Click="Undo">
                     <Image Source="/icons/undoarrow_undo_1534.png"/>
                 </Button>
-                <Button Width="25">
+                <Button Width="25" Click="Redo">
                     <Image Source="/icons/redoarrow_rehace_1547.png"/>
                 </Button>
             </ToolBar>
         
             <ToolBar Band="1" BandIndex="1">
-                <Button Width="25">
+                <Button Width="25" Click="Copy">
                     <Image Source="/icons/copy_paste_document_file_1557.png"/>
                 </Button>
-                <Button Width="25">
+                <Button Width="25" Click="Cut">
                     <Image Source="/icons/Scissors512_44207.png"/>
                 </Button>
-                <Button Width="25">
+                <Button Width="25" Click="Paste">
                     <Image Source="/icons/texteditor_pencil_detext_836.png"/>
                 </Button>
             </ToolBar>
@@ -118,27 +140,44 @@
             </RichTextBox.Resources>
             <RichTextBox.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Copy" >
+                    <MenuItem Header="Undo">
+                        <MenuItem.Icon >
+                            <Image Source="/icons/undoarrow_undo_1534.png"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Redo">
+                        <MenuItem.Icon >
+                            <Image Source="/icons/redoarrow_rehace_1547.png"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator/>
+                    <MenuItem Header="Copy" Click="Copy">
                         <MenuItem.Icon >
                             <Image Source="/icons/copy_paste_document_file_1557.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Past" >
+                    <MenuItem Header="Paste" Click="Paste" >
                         <MenuItem.Icon >
                             <Image Source="/icons/texteditor_pencil_detext_836.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Cut" >
+                    <MenuItem Header="Cut" Click="Cut">
                         <MenuItem.Icon >
                             <Image Source="/icons/Scissors512_44207.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator/>
-                    <MenuItem Header="Clear" >
+                    <MenuItem Header="Select All" Click="SelectAll" >
                         <MenuItem.Icon >
-                            <Image Source="/icons/copy_paste_document_file_1557.png"/>
+                            <Image Source="/icons/ic_done_all_128_28243.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Header="Deselect All"  Click="DeselectAll"  >
+                        <MenuItem.Icon >
+                            <Image Source="/icons/collapse_all_icon_136745.png"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                   
                 </ContextMenu>
             </RichTextBox.ContextMenu>
         </RichTextBox>
