--- a/WPFNodePad/MainWindow.xaml
+++ b/WPFNodePad/MainWindow.xaml
@@ -30,101 +30,78 @@
         <Image x:Key="redoImage" Source="/icons/redoarrow_rehace_1547.png"/>
         <Image x:Key="copyImage" Source="/icons/copy_paste_document_file_1557.png"/>
         <Image x:Key="pasteImage" Source="/icons/texteditor_pencil_detext_836.png"/>
-        <Image x:Key="cutImage" Source="/icons/Scissors512_44207.png"/>
+        <Image x:Key="cutImage"   Source="/icons/Scissors512_44207.png"/>
         <Image x:Key="sAllImage" Source="/icons/ic_done_all_128_28243.png"/>
         <Image x:Key="dSAllImage" Source="/icons/collapse_all_icon_136745.png"/>
 
         <Style TargetType="MenuItem" x:Key="undoMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource undoImage}"/>
             <Setter Property="Header" Value="_Undo"/>
-            <Setter Property="Tag" Value="undo"/>
-            <Setter Property="IsEnabled" Value="{Binding ElementName=undo,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding Undo}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="redoMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource redoImage}"/>
             <Setter Property="Header" Value="_Redo"/>
-            <Setter Property="Tag" Value="redo"/>
-            <Setter Property="IsEnabled" Value="{Binding ElementName=redo,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding Redo}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="copyMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource copyImage}"/>
             <Setter Property="Header" Value="_Copy"/>
-            <Setter Property="Tag" Value="copy"/>
-            <Setter Property="IsEnabled" Value="{Binding ElementName=copy,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding Copy}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="pasteMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource pasteImage}"/>
             <Setter Property="Header" Value="_Paste"/>
-            <Setter Property="Tag" Value="paste"/>
-            <Setter Property="IsEnabled" Value="{Binding ElementName=paste,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding Paste}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="cutMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource cutImage}"/>
             <Setter Property="Header" Value="_Cut"/>
-            <Setter Property="Tag" Value="cut"/>
-            <Setter Property="IsEnabled" Value="{Binding ElementName=copy,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding Cut}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="sAllMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource sAllImage}"/>
             <Setter Property="Header" Value="_SelectAll"/>
-            <Setter Property="Tag" Value="selectAll"/>
+            <Setter Property="Command" Value="{Binding SelectAll}"/>
         </Style>
 
         <Style TargetType="MenuItem" x:Key="dSAllMenuItem" BasedOn="{StaticResource menuButton}">
             <Setter Property="Icon" Value="{StaticResource dSAllImage}"/>
             <Setter Property="Header" Value="_DeselectAll"/>
-            <Setter Property="Tag" Value="deSelectAll" />
-            <Setter Property="IsEnabled" Value="{Binding ElementName=copy,Path=IsEnabled}"/>
+            <Setter Property="Command" Value="{Binding DeSelectAll}"/>
         </Style>
-
-
-
-
-
-        <ContextMenu x:Key="contMenu">
-            <MenuItem  Style="{StaticResource undoMenuItem}" Click="Operation"/>
-            <MenuItem  Style="{StaticResource redoMenuItem}" Click="Operation"/>
-            <Separator/>
-            <MenuItem  Style="{StaticResource copyMenuItem}" Click="Operation"/>
-            <MenuItem  Style="{StaticResource pasteMenuItem}" Click="Operation"/>
-            <MenuItem  Style="{StaticResource cutMenuItem}" Click="Operation"/>
-            <Separator/>
-            <MenuItem  Style="{StaticResource sAllMenuItem}" Click="Operation" IsEnabled="{Binding ElementName= sAll,Path=isEnabled}" />
-            <MenuItem  Style="{StaticResource dSAllMenuItem}" Click="Operation"/>
-        </ContextMenu> 
         
-        
-
     </Window.Resources>
+    
     <DockPanel>
 
         <Menu IsMainMenu="True" DockPanel.Dock="Top" Background="LightGray">
             
             <MenuItem Header="_File" >
-                <MenuItem Style="{StaticResource menuButton}" Header="_New" Click="Operation" Tag="newFile" >
+                <MenuItem Style="{StaticResource menuButton}" Header="_New" Command="{Binding NewFile}" >
                     <MenuItem.Icon >
                         <Image Source="/icons/Newfile_page_document_empty_6315.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                
-                <MenuItem Style="{StaticResource menuButton}" Header="_Open" Click="Operation" Tag="openFile">
+
+                <MenuItem Style="{StaticResource menuButton}" Header="_Open" Command="{Binding OpenFile}">
                     <MenuItem.Icon >
                         <Image Source="/icons/open-file256_25211.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                
-                <MenuItem Style="{StaticResource menuButton}" Header="_Save" Click="Operation" Tag="saveFile" IsEnabled="{Binding ElementName=save,Path=IsEnabled}">
+
+                <MenuItem Style="{StaticResource menuButton}" Header="_Save" Command="{Binding SaveFile}">
                     <MenuItem.Icon >
                         <Image Source="/icons/save_file_disk_open_searsh_loading_clipboard_1513.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                
-                <MenuItem Style="{StaticResource menuButton}" Header="_Save As.."  Click="Operation" Tag="saveFileAs">
+
+                <MenuItem Style="{StaticResource menuButton}" Header="_Save As.."  Command="{Binding SaveFileAs}">
                     <MenuItem.Icon >
                         <Image Source="/icons/diskette_save_saveas_1514.png"/>
                     </MenuItem.Icon>
@@ -136,37 +113,37 @@
             </MenuItem>
             
             <MenuItem Header="_Edit" >
-                <MenuItem  Style="{StaticResource undoMenuItem}" Click="Operation"/>
-                <MenuItem  Style="{StaticResource redoMenuItem}" Click="Operation"/>
+                <MenuItem  Style="{StaticResource undoMenuItem}" />
+                <MenuItem  Style="{StaticResource redoMenuItem}" />
                 <Separator/>
-                <MenuItem  Style="{StaticResource copyMenuItem}"  Click="Operation"/>
-                <MenuItem  Style="{StaticResource pasteMenuItem}" Click="Operation"/>
-                <MenuItem  Style="{StaticResource cutMenuItem}"   Click="Operation"/>
+                <MenuItem  Style="{StaticResource copyMenuItem}"  />
+                <MenuItem  Style="{StaticResource pasteMenuItem}" />
+                <MenuItem  Style="{StaticResource cutMenuItem}"   />
                 <Separator/>
-                <MenuItem  Style="{StaticResource sAllMenuItem}"  Click="Operation"  Name="sAll" IsEnabled="False"/>
-                <MenuItem  Style="{StaticResource dSAllMenuItem}" Click="Operation"/>
+                <MenuItem  Style="{StaticResource sAllMenuItem}"  />
+                <MenuItem  Style="{StaticResource dSAllMenuItem}" />
             </MenuItem>
             
-            <MenuItem Header="_About.." Click="Operation" Tag="about"/>
+            <MenuItem Header="_About.." Command="{Binding About}"/>
         </Menu>
 
-        <ToolBarTray DockPanel.Dock="Top">
+        <ToolBarTray Name="tb" DockPanel.Dock="Top">
             
             <ToolBar Band="1" BandIndex="1" Height="30">
 
-                <Button  Style="{StaticResource toolButton}" Click="Operation" ToolTip="New File" Tag="newFile">
+                <Button  Style="{StaticResource toolButton}" ToolTip="New File" Command="{Binding NewFile}">
                     <Image Source="\icons\Newfile_page_document_empty_6315.png"/>
                 </Button>
 
-                <Button Style="{StaticResource toolButton}" Click="Operation" Tag="openFile" ToolTip="Open File">
+                <Button Style="{StaticResource toolButton}" ToolTip="Open File" Command="{Binding OpenFile}">
                     <Image Source="\icons\open-file256_25211.png"/>
                 </Button>
 
-                <Button Name="save" Style="{StaticResource toolButton}" Click="Operation" Tag="saveFile" ToolTip="Save File" >
+                <Button Name="save" Style="{StaticResource toolButton}" ToolTip="Save File" Command="{Binding SaveFile}" >
                     <Image Source="\icons\save_file_disk_open_searsh_loading_clipboard_1513.png"/>
                 </Button>
 
-                <Button Style="{StaticResource toolButton}" Click="Operation" Tag="saveFileAs" ToolTip="Save File As">
+                <Button Style="{StaticResource toolButton}"  ToolTip="Save File As" Command="{Binding SaveFileAs}">
                     <Image Source="/icons/diskette_save_saveas_1514.png"/>
                 </Button>
 
@@ -174,40 +151,41 @@
             
             <ToolBar Band="1" BandIndex="1">
 
-                <Button Name="undo" Style="{StaticResource toolButton}" Click="Operation" Tag="undo" ToolTip="Undo" IsEnabled="False">
+                <Button  Style="{StaticResource toolButton}" ToolTip="Undo" Command="{Binding Undo}">
                     <Image Source="/icons/undoarrow_undo_1534.png" />
                 </Button>
 
-                <Button Name="redo" Style="{StaticResource toolButton}" Click="Operation" Tag="redo" ToolTip="Redo" IsEnabled="False">
+                <Button Style="{StaticResource toolButton}"  ToolTip="Redo" Command="{Binding Redo}">
                     <Image Source="/icons/redoarrow_rehace_1547.png"/>
                 </Button>
                 
             </ToolBar>
         
             <ToolBar Band="1" BandIndex="1">
-                <Button Name="copy" Style="{StaticResource toolButton}" Click="Operation" Tag="copy" ToolTip="Copy" IsEnabled="False">
+                <Button  Style="{StaticResource toolButton}"  ToolTip="Copy" Command="{Binding Copy}">
                     <Image Source="/icons/copy_paste_document_file_1557.png"/>
                 </Button>
 
-                <Button Style="{StaticResource toolButton}" Click="Operation" Tag="cut" ToolTip="Cut" IsEnabled="{Binding ElementName=copy,Path=IsEnabled}">
+
+                <Button Style="{StaticResource toolButton}"  ToolTip="Cut" Command="{Binding Cut}">
                     <Image Source="/icons/Scissors512_44207.png"/>
                 </Button>
 
-                <Button Name="paste" Style="{StaticResource toolButton}" Click="Operation" Tag="paste" ToolTip="Past">
+                <Button Style="{StaticResource toolButton}"  ToolTip="Past" Command="{Binding Paste}">
                     <Image Source="/icons/texteditor_pencil_detext_836.png"/>
                 </Button>
             </ToolBar>
 
             <ToolBar Band="1" BandIndex="1">
-                <ToggleButton  Name="italicFont" Width="20" Click="FontToggleButtons" >
+                <ToggleButton   Width="20" Command="{Binding FStyle}" >
                     <Image Source="/icons/italic_icon-icons.com_70938.png" />
                 </ToggleButton>
-                
-                <ToggleButton Name="boldFont" Width="20" Click="FontToggleButtons" >
+
+                <ToggleButton  Width="20" Command="{Binding FWeight}" >
                     <Image Source="/icons/bold-text_icon-icons.com_71249.png" />
                 </ToggleButton>
-                
-                <ToggleButton  Name="underlineFont" Width="20" Click="FontToggleButtons">
+
+                <ToggleButton  Width="20" Command="{Binding TextDecor}">
                     <Image Source="/icons/underline-text-button_icon-icons.com_72498.png" />
                 </ToggleButton>
                 
@@ -215,14 +193,14 @@
                 
                 <StackPanel Orientation="Horizontal" ToolTip="Font Size">
                     <Label  Content ="Font Size" FontSize="14" />
-                    <ComboBox Name ="fontSize" IsReadOnly="True" Height="25" VerticalContentAlignment="Center" SelectedIndex="3" />
+                    <ComboBox ItemsSource="{Binding FontSize ,Mode=OneTime}" Name ="fontSize" IsReadOnly="True" Height="25" VerticalContentAlignment="Center" SelectedIndex="3" />
                 </StackPanel>
                 
                 <Separator/>
                 
                 <StackPanel Orientation="Horizontal" ToolTip="Font Color">
                     <Label  Content ="Font Color" FontSize="14" />
-                    <ComboBox Name ="fontColor" IsReadOnly="True" Height="25" VerticalContentAlignment="Center" SelectedIndex="3">
+                    <ComboBox SelectedIndex = "7" ItemsSource="{Binding FontColors,Mode=OneTime}" Name ="fontColor" IsReadOnly="True" Height="25" VerticalContentAlignment="Center" >
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
@@ -239,65 +217,32 @@
         <StatusBar DockPanel.Dock="Bottom" Height="30" Background="LightGray">
             <StackPanel Orientation="Horizontal">
                 <Label Content="Rows:"  FontWeight="Bold"  Foreground="#FF0F31EF"/>
-                <Label Name="rowsCount" Content="0" FontWeight="Bold"  Foreground="#FF0F31EF"/>
-                <Label Content="Simbols:"  FontWeight="Bold"  Foreground="#FF079010"/>
-                <Label Name="simbolsCount" Content="0" FontWeight="Bold"  Foreground="#FF079010"/>
+                <Label  Content="{Binding RowsCount}" FontWeight="Bold"  Foreground="#FF0F31EF"/>
+                <Label Content="Chars:"  FontWeight="Bold"  Foreground="#FF079010"/>
+                <Label Content="{Binding CharsCount}" FontWeight="Bold"  Foreground="#FF079010"/>
                 <Label Content="Words:"  FontWeight="Bold"  Foreground="#FF900733"/>
-                <Label Name="wordsCount" Content="0" FontWeight="Bold"  Foreground="#FF900733"/>
+                <Label Content="{Binding WordsCount}" FontWeight="Bold"  Foreground="#FF900733"/>
             </StackPanel>
         </StatusBar>
-
-        <TextBox  ContextMenu="{StaticResource contMenu}" TextWrapping="Wrap"  AcceptsReturn="True" VerticalScrollBarVisibility="Auto" FontSize="{Binding  ElementName = fontSize, Path=SelectedItem}" Foreground ="{Binding ElementName = fontColor,Path = SelectedItem.Name}" Name="userText" Margin="5" TextChanged="UserTextChanged" SelectionChanged="SelectionChanged">
-            <!--<TextBox.ContextMenu>
-                <ContextMenu>
-                    <MenuItem  Style="{StaticResource menuButton}" Click="Operation" Tag="undo" Header="Undo" IsEnabled="{Binding ElementName= x:undo,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/undoarrow_undo_1534.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-
-                    <MenuItem  Style="{StaticResource menuButton}" Header="Redo" Click="Operation" Tag="redo" IsEnabled="{Binding ElementName=redo,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/redoarrow_rehace_1547.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    
+        <TextBox  TextWrapping="Wrap"  AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+                  FontSize="{Binding  ElementName = fontSize, Path = SelectedItem}" 
+                  Foreground ="{Binding ElementName = fontColor,Path = SelectedItem.Name}"
+                  Text="{Binding Text,Mode = TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  Name="userText" Margin="5">
+            <TextBox.ContextMenu>
+                <ContextMenu >
+                    <MenuItem    Style="{StaticResource undoMenuItem}" />
+                    <MenuItem    Style="{StaticResource redoMenuItem}" />
                     <Separator/>
-
-                    <MenuItem Style="{StaticResource menuButton}" Header="Copy" Click="Operation" Tag="copy" IsEnabled="{Binding ElementName=copy,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/copy_paste_document_file_1557.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-
-                    <MenuItem  Style="{StaticResource menuButton}" Header="Paste" Click="Operation" Tag="paste" IsEnabled="{Binding ElementName=paste,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/texteditor_pencil_detext_836.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-
-                    <MenuItem  Style="{StaticResource menuButton}" Header="Cut" Click="Operation" Tag="cut" IsEnabled="{Binding ElementName=copy,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/Scissors512_44207.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    
+                    <MenuItem    Style="{StaticResource copyMenuItem}"   />
+                    <MenuItem    Style="{StaticResource pasteMenuItem}" />
+                    <MenuItem    Style="{StaticResource cutMenuItem}"    />
                     <Separator/>
-
-                    <MenuItem Style="{StaticResource menuButton}" Header="Select All" Click="Operation" Tag="selectAll" IsEnabled="{Binding ElementName=sAll,Path=IsEnabled}">
-                        <MenuItem.Icon >
-                            <Image Source="/icons/ic_done_all_128_28243.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-
-                    <MenuItem Style="{StaticResource menuButton}" Header="Deselect All"  Click="Operation" Tag="deSelectAll" IsEnabled="{Binding ElementName=copy,Path=IsEnabled}" >
-                        <MenuItem.Icon >
-                            <Image Source="/icons/collapse_all_icon_136745.png"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                   
+                    <MenuItem    Style="{StaticResource sAllMenuItem}"  />
+                    <MenuItem    Style="{StaticResource dSAllMenuItem}" />
                 </ContextMenu>
-            </TextBox.ContextMenu>-->
+            </TextBox.ContextMenu>
         </TextBox>
+            
     </DockPanel>
 </Window>
